[package]
name = "roadster"
version = "0.3.0"
edition = "2021"
publish = true
description = "A \"Batteries Included\" web framework for rust designed to get you moving fast."
repository = "https://github.com/roadster-rs/roadster"
license = "MIT OR Apache-2.0"
keywords = ["web", "framework"]
categories = ["web-programming", "web-programming::http-server"]
# Determined using `cargo msrv` -- https://github.com/foresterre/cargo-msrv
rust-version = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sidekiq", "db-sql", "open-api", "jwt-ietf", "cli", "otel"]
http = ["dep:axum", "dep:axum-extra", "dep:tower", "dep:tower-http"]
open-api = ["http", "dep:aide", "dep:schemars"]
sidekiq = ["dep:rusty-sidekiq", "dep:bb8", "dep:num_cpus"]
db-sql = ["dep:sea-orm", "dep:sea-orm-migration"]
jwt = ["dep:jsonwebtoken"]
jwt-ietf = ["jwt"]
jwt-openid = ["jwt"]
cli = ["dep:clap"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]
grpc = ["dep:tonic"]

[dependencies]
# Config
# We only support `toml` configs currently, and one of the default features (`rust-ini`) pulls in a dependency
# that breaks the coverage build on nightly.
config = { version = "0.14.0", default-features = false, features = ["toml", "convert-case"] }
dotenvy = "0.15.5"

# Tracing
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
opentelemetry-semantic-conventions = "0.15.0"
opentelemetry = { version = "0.23.0", features = ["trace", "metrics", "logs"], optional = true }
opentelemetry_sdk = { version = "0.23.0", features = ["tokio", "rt-tokio", "metrics", "logs", "trace"], optional = true }
opentelemetry-otlp = { version = "0.16.0", features = ["metrics", "trace", "logs"], optional = true }
tracing-opentelemetry = { version = "0.24.0", features = ["metrics"], optional = true }

# Controllers
axum = { workspace = true, optional = true }
axum-extra = { version = "0.9.0", features = ["typed-header"], optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.0", features = ["trace", "timeout", "request-id", "util", "normalize-path", "sensitive-headers", "catch-panic", "compression-full", "decompression-full", "limit"], optional = true }
aide = { workspace = true, features = ["axum", "redoc", "scalar", "macros"], optional = true }
schemars = { workspace = true, optional = true }

# DB
sea-orm = { version = "1.0.0-rc.5", features = ["debug-print", "runtime-tokio-rustls", "sqlx-postgres", "macros"], optional = true }
sea-orm-migration = { version = "1.0.0-rc.5", features = ["runtime-tokio-rustls", "sqlx-postgres"], optional = true }

# Workers
rusty-sidekiq = { workspace = true, optional = true }
bb8 = { version = "0.8.0", optional = true }
num_cpus = { version = "1.13.0", optional = true }

# Rust async
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }

# Auth
jsonwebtoken = { version = "9.0.0", optional = true }

# CLI
clap = { workspace = true, features = ["derive", "string"], optional = true }

# gRPC
tonic = { workspace = true, optional = true }

# Others
anyhow = { workspace = true }
serde = { workspace = true }
serde_derive = "1.0.184"
serde_with = { version = "3.8.1", features = ["macros", "chrono_0_4"] }
strum = "0.26.2"
strum_macros = "0.26.2"
itertools = "0.13.0"
serde_json = "1.0.85"
toml = "0.8.0"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
futures = "0.3.19"
futures-core = "0.3.19"
chrono = { version = "0.4.34", features = ["serde"] }
byte-unit = { version = "5.0.0", features = ["serde"] }
convert_case = "0.6.0"
const_format = "0.2.0"
typed-builder = "0.18.0"
num-traits = "0.2.14"
validator = { version = "0.18.0", features = ["derive"] }
thiserror = "1.0.35"
# Add latest version of `time` to resolve a build error on nightly
# https://github.com/time-rs/time/issues/681
time = "0.3.36"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
insta = { version = "1.39.0", features = ["toml"] }
mockall = "0.12.1"
mockall_double = "0.3.1"
rstest = "0.21.0"

[workspace]
members = [".", "examples/*"]

[workspace.dependencies]
# Tracing
tracing = { version = "0.1.40", features = ["async-await"] }
async-trait = "0.1.74"

# Controllers
aide = { version = "0.13.4", features = ["axum"] }
axum = "0.7.4"
schemars = "0.8.16"

# CLI
clap = { version = "4.3.0", features = ["derive"] }

# gRPC
tonic = { version = "0.11.0" }

# Sidekiq
# Todo: the default `rss-stats` feature has a dependency that currently can't be satisfied (memchr: ~2.3)
rusty-sidekiq = { version = "0.10.5", default-features = false }

# Others
# Todo: minimize tokio features included in `roadster`
tokio = { version = "1.28.0", features = ["full"] }
# For CancellationToken
tokio-util = { version = "0.7.10" }
anyhow = "1.0.46"
serde = { version = "1.0.184", features = ["derive"] }

[package.metadata.docs.rs]
# Have docs.rs pass `--all-features` to ensure all features have their documentation built.
all-features = true
