[package]
name = "full"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["grpc"]
grpc = ["roadster/grpc", "dep:tonic", "dep:tonic-reflection", "dep:prost"]

[dependencies]
roadster = { version = "0.6", path = "../.." }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Http API
aide = { workspace = true }
axum = { workspace = true }
schemars = { workspace = true }

# gRPC API
tonic = { workspace = true, optional = true }
tonic-reflection = { version = "0.12.0", optional = true }
prost = { version = "0.13", optional = true }

# DB
entity = { path = "entity" }
migration = { path = "migration" }
clap = { version = "4.3.0", features = ["derive"] }

# The default `rss-stats` feature has a dependency that currently can't be satisfied (memchr: ~2.3)
rusty-sidekiq = { version = "0.10.5", default-features = false }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"
vergen = { version = "8.0.0", features = ["git", "gitcl"] }

[[bin]]
name = "full"
path = "./src/main.rs"

[lib]
name = "full"
path = "./src/lib.rs"
