[package]
name = "full"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["grpc"]
grpc = ["roadster/grpc", "dep:tonic", "dep:tonic-reflection", "dep:prost"]

[dependencies]
roadster = { version = "0.7-alpha", path = "../..", features = ["email-smtp", "email-sendgrid", "config-yml"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Http API
aide = { workspace = true }
axum = { workspace = true }
schemars = { workspace = true }

# gRPC API
tonic = { workspace = true, optional = true }
tonic-reflection = { version = "0.12.0", optional = true }
prost = { workspace = true, optional = true }

# DB
migration = { path = "migration" }
sea-orm = { workspace = true }
clap = { version = "4.3.0", features = ["derive"] }

# The default `rss-stats` feature has a dependency that currently can't be satisfied (memchr: ~2.3)
rusty-sidekiq = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }

# Email
lettre = { workspace = true, features = ["pool"] }
sendgrid = { workspace = true }

# Other
uuid = { workspace = true, features = ["v7"] }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
roadster = { version = "0.7-alpha", path = "../..", features = ["testing-mocks"] }

[build-dependencies]
tonic-build = { workspace = true }
vergen = { workspace = true }
vergen-gitcl = { workspace = true }

[[bin]]
name = "full"
path = "./src/main.rs"

[lib]
name = "full"
path = "./src/lib.rs"
